# cosmos

./: .gitignore  EXTENSIONS.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: aur-publish.yml  ci.yml  release.yml
aur/kosmos/: PKGBUILD
aur/kosmos-bin/: PKGBUILD
public/: kosmos-jsx-runtime.js  kosmos-react.js
scripts/: bump-version.sh
src/: App.tsx  globals.css  store.ts  types.ts  vite-env.d.ts  workspace-store.ts
src-tauri/: Cargo.toml  build.rs  kosmos.desktop  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/cosmos-agent/: Cargo.toml
src-tauri/crates/cosmos-agent/src/: main.rs
src-tauri/crates/cosmos-core/: Cargo.toml
src-tauri/crates/cosmos-core/src/: editor.rs  file_tree.rs  git.rs  lib.rs  terminal.rs  watcher.rs
src-tauri/crates/cosmos-core/src/lsp/: detection.rs  installer.rs  mod.rs  registry.rs
src-tauri/crates/cosmos-protocol/: Cargo.toml
src-tauri/crates/kosmos-agent/: Cargo.toml
src-tauri/crates/kosmos-core/: Cargo.toml
src-tauri/crates/kosmos-core/src/: editor.rs  error.rs  file_tree.rs  git.rs  git_stash.rs  lib.rs  search.rs  terminal.rs  watcher.rs
src-tauri/crates/kosmos-core/src/lsp/: detection.rs  framing.rs  installer.rs  mod.rs  registry.json  registry.rs  servers.json
src-tauri/crates/kosmos-protocol/: Cargo.toml
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  plugins.rs  search.rs
src-tauri/src/git/: mod.rs
src-tauri/src/lsp/: detection.rs  mod.rs  (+3 more)
src/components/: DragOverlay.tsx  PaneContainer.tsx  ProjectBar.tsx  StatusBar.tsx  TabBar.tsx  TabContent.tsx
src/contexts/: WorkspaceContext.tsx
src/hooks/: use-click-outside.ts  use-git-actions.ts  use-git-status.ts
src/lib/: drag-threshold.ts  git-tree.ts  monaco-config.ts  pane-tree.ts
src/lsp/: client.ts  lsp-store.ts  monaco-languages.ts
src/plugins/: api.ts  host.ts  index.ts  types.ts
src/store/: drag.store.ts  editor.store.ts  infinity.store.ts  layout.store.ts  lsp.init.ts  lsp.lifecycle.ts  lsp.store.ts  lsp.types.ts  plugin.store.ts  settings.store.ts  toast.store.ts  update.store.ts  workspace.store.ts
src/styles/: globals.css
src/tabs/: index.ts  registry.ts  types.ts
src/test/: setup.ts
src/types/: index.ts
(+96 files in other folders)
